chore(api): update api definitions
